@@ -67,7 +67,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
         // create an instance of the bean
         Object bean;
         try {
-            bean = beanClass.newInstance();
+            bean = beanClass.getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             bean = null;
         }
@@ -88,7 +88,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
     protected Collection<String> generateForm(final Template template, Class beanClass, Object bean, final Map<String, String[]> values, final String prefix)
     throws BeanUtilsException {
-        final ArrayList<String> set_values = new ArrayList<String>();
+        final var set_values = new ArrayList<String>();
 
         if (null == template) {
             return set_values;
@@ -97,26 +97,23 @@ abstract public class AbstractFormBuilder implements FormBuilder {
         if (null == bean) {
             // generate the form fields using the provided value map to set the
             // default values for the fields
-            BeanUtils.processProperties(beanClass, null, null, null, new BeanPropertyProcessor() {
-                public boolean gotProperty(String name, PropertyDescriptor descriptor)
-                throws IllegalAccessException, IllegalArgumentException, InvocationTargetException {
-                    String[] property_values = null;
-                    if (values != null) {
-                        if (null == prefix) {
-                            property_values = values.get(name);
-                        } else {
-                            property_values = values.get(prefix + name);
-                        }
+            BeanUtils.processProperties(beanClass, null, null, null, (name, descriptor) -> {
+                String[] property_values = null;
+                if (values != null) {
+                    if (null == prefix) {
+                        property_values = values.get(name);
+                    } else {
+                        property_values = values.get(prefix + name);
                     }
-
-                    generateFormField(template, null, descriptor.getPropertyType(), name, property_values, prefix, set_values);
-
-                    return true;
                 }
+
+                generateFormField(template, null, descriptor.getPropertyType(), name, property_values, prefix, set_values);
+
+                return true;
             });
         } else {
             // check if the bean is constrained
-            final Constrained constrained = ConstrainedUtils.makeConstrainedInstance(bean);
+            final var constrained = ConstrainedUtils.makeConstrainedInstance(bean);
 
             Validated validated = null;
 
@@ -146,52 +143,49 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
             // generate the form fields using the bean's property values to set
             // the default values for the fields
-            BeanUtils.processPropertyValues(bean, null, null, null, new BeanPropertyValueProcessor() {
-                public void gotProperty(String name, PropertyDescriptor descriptor, Object value)
-                throws IllegalAccessException, IllegalArgumentException, InvocationTargetException {
-                    String[] property_values = null;
-                    ConstrainedProperty constrained_property = null;
+            BeanUtils.processPropertyValues(bean, null, null, null, (name, descriptor, value) -> {
+                String[] property_values = null;
+                ConstrainedProperty constrained_property = null;
 
-                    // get the corresponding constrained property, if it exists
-                    if (constrained != null) {
-                        constrained_property = constrained.getConstrainedProperty(name);
-                    }
-
-                    // check if the bean is validated and if the validation error for the
-                    // property contains an erroneous value, in that case this value will
-                    // be used instead, since it contains the exact cause of the error.
-                    if (previous_errors != null &&
-                        previous_errors.size() > 0) {
-                        for (ValidationError error : previous_errors) {
-                            if (error.getErroneousValue() != null &&
-                                error.getSubject().equals(name)) {
-                                property_values = ArrayUtils.createStringArray(error.getErroneousValue(), constrained_property);
-                                break;
-                            }
-                        }
-                    }
-
-                    if (values != null) {
-                        if (null == prefix) {
-                            property_values = values.get(name);
-                        } else {
-                            property_values = values.get(prefix + name);
-                        }
-                    } else {
-                        // if no erroneous value could be obtained, create a string
-                        // representation of the property value
-                        if (null == property_values) {
-                            if (null == value) {
-                                property_values = null;
-                            } else {
-                                property_values = ArrayUtils.createStringArray(value, constrained_property);
-                            }
-                        }
-                    }
-
-                    // generate the form field
-                    generateFormField(template, constrained, descriptor.getPropertyType(), name, property_values, prefix, set_values);
+                // get the corresponding constrained property, if it exists
+                if (constrained != null) {
+                    constrained_property = constrained.getConstrainedProperty(name);
                 }
+
+                // check if the bean is validated and if the validation error for the
+                // property contains an erroneous value, in that case this value will
+                // be used instead, since it contains the exact cause of the error.
+                if (previous_errors != null &&
+                    previous_errors.size() > 0) {
+                    for (var error : previous_errors) {
+                        if (error.getErroneousValue() != null &&
+                            error.getSubject().equals(name)) {
+                            property_values = ArrayUtils.createStringArray(error.getErroneousValue(), constrained_property);
+                            break;
+                        }
+                    }
+                }
+
+                if (values != null) {
+                    if (null == prefix) {
+                        property_values = values.get(name);
+                    } else {
+                        property_values = values.get(prefix + name);
+                    }
+                } else {
+                    // if no erroneous value could be obtained, create a string
+                    // representation of the property value
+                    if (null == property_values) {
+                        if (null == value) {
+                            property_values = null;
+                        } else {
+                            property_values = ArrayUtils.createStringArray(value, constrained_property);
+                        }
+                    }
+                }
+
+                // generate the form field
+                generateFormField(template, constrained, descriptor.getPropertyType(), name, property_values, prefix, set_values);
             });
 
             if (validated != null) {
@@ -235,7 +229,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
     protected Collection<String> generateField(Template template, String templateFieldName, Class propertyType, ConstrainedProperty property, String[] values, String prefix, ArrayList<String> setValues, boolean replaceExistingValues) {
         if (null == setValues) {
-            setValues = new ArrayList<String>();
+            setValues = new ArrayList<>();
         }
 
         if (null == template ||
@@ -277,7 +271,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
     protected Collection<String> generateField(Template template, String templateFieldName, Class propertyType, String name, String[] values, String prefix, ArrayList<String> setValues, boolean replaceExistingValues) {
         if (null == setValues) {
-            setValues = new ArrayList<String>();
+            setValues = new ArrayList<>();
         }
 
         if (null == template ||
@@ -300,7 +294,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
     }
 
     protected void generateField(Template template, String templateFieldName, Class propertyType, String name, ConstrainedProperty property, String[] values, ArrayList<String> setValues, boolean replaceExistingValues) {
-        Template builder_template = getBuilderTemplateInstance();
+        var builder_template = getBuilderTemplateInstance();
 
         generateFieldHidden(template, templateFieldName, name, property, values, builder_template, setValues, replaceExistingValues);
         generateFieldInput(template, templateFieldName, name, property, values, builder_template, setValues, replaceExistingValues);
@@ -442,18 +436,18 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             // set the field name
             builderTemplate.setValue(getIdName(), template.getEncoder().encode(name));
 
-            // setup the active values
+            // set up the active values
             ArrayList<String> active_values = null;
             if (values != null &&
                 values.length > 0) {
                 if (singleValue) {
                     if (values[0] != null) {
-                        active_values = new ArrayList<String>();
+                        active_values = new ArrayList<>();
                         active_values.add(values[0]);
                     }
                 } else {
-                    active_values = new ArrayList<String>();
-                    for (String value : values) {
+                    active_values = new ArrayList<>();
+                    for (var value : values) {
                         if (null == value) {
                             continue;
                         }
@@ -464,7 +458,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             if (null == active_values &&
                 property != null &&
                 property.hasDefaultValue()) {
-                active_values = new ArrayList<String>();
+                active_values = new ArrayList<>();
                 active_values.add(property.getDefaultValue().toString());
             }
 
@@ -537,7 +531,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
                 template.setValue(field, builderTemplate.getBlock(prefix));
             } else {
-                for (String value : list_values) {
+                for (var value : list_values) {
                     if (null == value) {
                         continue;
                     }
@@ -651,8 +645,8 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             ArrayList<String> active_values = null;
             if (values != null &&
                 values.length > 0) {
-                active_values = new ArrayList<String>();
-                for (String value : values) {
+                active_values = new ArrayList<>();
+                for (var value : values) {
                     if (null == value) {
                         continue;
                     }
@@ -662,19 +656,19 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             if (null == active_values &&
                 property != null &&
                 property.hasDefaultValue()) {
-                active_values = new ArrayList<String>();
+                active_values = new ArrayList<>();
                 active_values.add(property.getDefaultValue().toString());
             }
 
             String[] list_values = null;
 
-            // setup a select field options for constrained properties that
+            // set up a select field options for constrained properties that
             // are constrained to a list
             if (property != null &&
                 property.isInList()) {
                 list_values = property.getInList();
             }
-            // setup a select field options for enum properties
+            // set up a select field options for enum properties
             else if (propertyType != null) {
                 if (propertyType.isEnum()) {
                     list_values = ClassUtils.getEnumClassValues(propertyType);
@@ -685,7 +679,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             }
 
             if (list_values != null) {
-                List<String> list = Arrays.asList(list_values);
+                var list = Arrays.asList(list_values);
 
                 String default_value = null;
                 if (property != null &&
@@ -697,7 +691,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
                 }
 
                 // setup the select options
-                int i = 0;
+                var i = 0;
                 while (i < list.size()) {
                     String value;
                     if (default_value != null) {
@@ -791,7 +785,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             field_buffer.append(templateFieldName);
             field_attributes = field_buffer.toString();
 
-            int counter = 0;
+            var counter = 0;
             do {
                 // determine the value by using the provided value or apply the
                 // default value if it has been set in the ConstrainedProperty
@@ -848,7 +842,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
                 // replace the form field tag in the provided template by the
                 // newly constructed functional form field
-                String field_content = builderTemplate.getBlock(PREFIX_FORM_DISPLAY);
+                var field_content = builderTemplate.getBlock(PREFIX_FORM_DISPLAY);
                 if (0 == counter) {
                     template.setValue(field, field_content);
                 } else {
@@ -891,7 +885,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
         // set a custom label if it's available from the resourcebundle
         if (template.hasResourceBundles()) {
-            for (ResourceBundle bundle : template.getResourceBundles()) {
+            for (var bundle : template.getResourceBundles()) {
                 // obtain the configuration value
                 try {
                     label = bundle.getString(label_id);
@@ -929,20 +923,19 @@ abstract public class AbstractFormBuilder implements FormBuilder {
         // create an instance of the bean
         Object bean;
         try {
-            bean = beanClass.newInstance();
+            bean = beanClass.getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             bean = null;
         }
 
         // generate the form fields
-        Set<String> property_names = BeanUtils.getPropertyNames(beanClass, null, null, null);
-        for (String property_name : property_names) {
+        var property_names = BeanUtils.getPropertyNames(beanClass, null, null, null);
+        for (var property_name : property_names) {
             removeField(template, property_name, prefix);
         }
 
         Validated validated;
-        if (bean != null &&
-            bean instanceof Validated) {
+        if (bean instanceof Validated) {
             validated = (Validated) bean;
 
             getValidationBuilder().removeValidationErrors(template, validated.getValidatedSubjects(), prefix);
@@ -972,7 +965,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
         }
 
         String value_id;
-        for (String value_prefix : VALUE_PREFIXES) {
+        for (var value_prefix : VALUE_PREFIXES) {
             value_id = value_prefix + templateFieldName;
             if (template.isValueSet(value_id)) {
                 template.removeValue(value_id);
@@ -981,7 +974,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
     }
 
     public Collection<String> selectParameter(Template template, String name, String[] values) {
-        ArrayList<String> set_values = new ArrayList<String>();
+        var set_values = new ArrayList<String>();
 
         if (null == template ||
             null == name ||
@@ -993,7 +986,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
 
         StringBuilder value_id_buffer;
         String value_id;
-        for (String value : values) {
+        for (var value : values) {
             if (null == value) {
                 continue;
             }
@@ -1002,13 +995,13 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             value_id_buffer.append(":");
             value_id_buffer.append(value);
 
-            value_id = value_id_buffer.toString() + SUFFIX_SELECTED;
+            value_id = value_id_buffer + SUFFIX_SELECTED;
             if (template.hasValueId(value_id)) {
                 template.setValue(value_id, getValueSelected());
                 set_values.add(value_id);
             }
 
-            value_id = value_id_buffer.toString() + SUFFIX_CHECKED;
+            value_id = value_id_buffer + SUFFIX_CHECKED;
             if (template.hasValueId(value_id)) {
                 template.setValue(value_id, getValueChecked());
                 set_values.add(value_id);
@@ -1046,7 +1039,7 @@ abstract public class AbstractFormBuilder implements FormBuilder {
         }
 
         StringBuilder value_id_buffer;
-        for (String value : values) {
+        for (var value : values) {
             if (null == value) {
                 continue;
             }
@@ -1055,12 +1048,12 @@ abstract public class AbstractFormBuilder implements FormBuilder {
             value_id_buffer.append(":");
             value_id_buffer.append(value);
 
-            value_id = value_id_buffer.toString() + SUFFIX_SELECTED;
+            value_id = value_id_buffer + SUFFIX_SELECTED;
             if (template.hasValueId(value_id)) {
                 template.removeValue(value_id);
             }
 
-            value_id = value_id_buffer.toString() + SUFFIX_CHECKED;
+            value_id = value_id_buffer + SUFFIX_CHECKED;
             if (template.hasValueId(value_id)) {
                 template.removeValue(value_id);
             }
